--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Esta es mi pagina web, bienvenido(a)</h1>
-    <a href="contacto.html">Ir a contacto</a>
+    <a href="vistas/contacto.html">Ir a contacto</a><br>
+    <a href="vistas/Redes_Sociales.html">Redes Sociales</a>
+    <a href="https://google.com/" target="_blank">
+    <img src="imagenes/google.jpg" alt="Ir">
+    </a>
 </body>
 </html>
