--- a/vistas/Redes_Sociales.html
+++ b/vistas/Redes_Sociales.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Redes Sociales</title>
 </head>
 <body>
-    <h3>Esta es mi pagina de contacto</h3>
+    <h1>Redes Sociales</h1>
     <a href="../index.html">Regresar</a>
 </body>
 </html>
