--- a/index.html
+++ b/index.html
@@ -7,11 +7,38 @@
     <title>Mi pagina web</title>
 </head>
 <body>
+    <!--Encabezado-->
+    <div> 
+        <!--Aqui va el logo-->
+        <a href="">
+            <img src="" alt="LOGO de Biblioteca de Coronango">
+        </a>
+        <!--Aqui va nuestro titulo-->
+        <h1 style="color:rgb(red, green, blue)">Biblioteca de Coronango</h1>
+        <!--Aqui van las redes sociales-->
+        <a href="vistas/contacto.html">
+            <img src="" alt="Ir a facebook">
+            </a>
+        <a href="vistas/Redes_Sociales.html">
+            <img src="" alt="Ir a instagram">
+        </a>
+        <a href="">
+            <img src="" alt="Ir a Tik Tok">
+        </a>
+    </div>
+
+    <!--COMTENIDO PRINCIPAL-->
+    <h2>Libro del mes</h2>
+    <div>
+        <img src="" alt="Portada del libro Mujercitas">
+        <h3>Mujercitas</h3>
+    </div>
+</div>
     <h1>Esta es mi pagina web, bienvenido(a)</h1>
-    <a href="vistas/contacto.html">Ir a contacto</a><br>
-    <a href="vistas/Redes_Sociales.html">Redes Sociales</a>
-    <a href="https://google.com/" target="_blank">
-    <img src="imagenes/google.jpg" alt="Ir">
+    < a href="vistas/contacto.html">Ir a contacto</a><br>
+    <a https://google.com/" target="_blank">
+    <img<!--Enref="vistas/Redes_Sociales.html">Redes Sociales</a>
+    <a href=src="imagenes/google.jpg" alt="Ir">
     </a>
 </body>
 </html>
